# aleph-parachain

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  README.md  rust-toolchain.toml
.github/workflows/: parachain-progress-test.yml  test-code.yml  test-parachain-progress.yml
aleph-header-chain/: Cargo.toml
aleph-header-chain/src/: aleph_justification.rs  lib.rs
bridge-primitives/aleph-header-chain/: Cargo.toml
bridge-primitives/aleph-header-chain/src/: aleph_justification.rs  lib.rs
bridge-primitives/chain-aleph-zero/: Cargo.toml
bridge-primitives/chain-aleph-zero/src/: lib.rs
local-network/: config.toml
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallet-bridge-aleph/: Cargo.toml
pallet-bridge-aleph/src/: benchmarking.rs  lib.rs  mock.rs  storage_types.rs
pallets/aleph/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs  xcm_config.rs
scripts/: build_remote.sh  run_local_network.sh  zombienet_setup.sh
tests/zombienet/: parachain_progress.zndsl
