[package]
name = "pallet-bridge-aleph"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.6.0", default-features = false, features = [
	"derive",
] }

# Bridge Dependencies
bp-runtime = { workspace = true }
bp-header-chain = { workspace = true }
bp-aleph-header-chain = { path = "../aleph-header-chain", default-features = false }

# Substrate Dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-trie = { workspace = true }

# Benchmarking dependencies
frame-benchmarking = { workspace = true, optional = true }
bp-test-utils = { workspace = true, optional = true }

[dev-dependencies]
bp-test-utils = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
hex = "0.4"

[features]
default = ["std"]
std = [
	"bp-header-chain/std",
	"bp-aleph-header-chain/std",
	"bp-runtime/std",
	"bp-test-utils/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-trie/std",
]
try-runtime = [
	"frame-support/try-runtime", 
	"frame-system/try-runtime",
]
runtime-benchmarks = [
	"bp-test-utils",
	"frame-benchmarking/runtime-benchmarks",
]
