[package]
name = "bp-aleph-zero"
description = "Primitives of Aleph Zero runtime."
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]

# Bridge Dependencies

bp-header-chain = { workspace = true }
bp-aleph-header-chain = { path = "../aleph-header-chain", default-features = false }
bp-runtime = { workspace = true }

# Substrate Based Dependencies

frame-support = { workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = [
	"bp-aleph-header-chain/std",
	"bp-header-chain/std",
	"bp-runtime/std",
	"frame-support/std",
	"sp-api/std",
	"sp-core/std",
]
